--- a/packages/website/theme/styles/vars.css
+++ b/packages/website/theme/styles/vars.css
@@ -1,5 +1,6 @@
 /* 主题色覆盖：https://github.com/vuejs/vitepress/blob/main/src/client/theme-default/styles/vars.css */
 :root {
+  --bg-color: #f7f8fa;
   /* 主题色 */
   --vp-c-brand-1: #ff7e33;
 }
